bug#41398 01_pgman.diff pgman: take tsman mutex during LCP copy-page switch